--- a/alfm_bem/alfm_bem_refs.bib
+++ b/alfm_bem/alfm_bem_refs.bib
@@ -6,7 +6,8 @@
   title={Neural {T}uring Machines},
   author={Graves, Alex and Wayne, Greg and Danihelka, Ivo},
   journal={arXiv preprint arXiv:1410.5401},
-  year={2014}
+  year={2014},
+  url={https://arxiv.org/abs/1410.5401}
 }
 
 @article{Graves2016,
@@ -17,21 +18,25 @@
   number={7626},
   pages={471--476},
   year={2016},
-  publisher={Nature Publishing Group}
+  publisher={Nature Publishing Group},
+  doi={10.1038/nature20101},
+  url={https://doi.org/10.1038/nature20101}
 }
 
 @inproceedings{Weston2015,
   title={Memory Networks},
   author={Weston, Jason and Chopra, Sumit and Bordes, Antoine},
   booktitle={International Conference on Learning Representations (ICLR)},
-  year={2015}
+  year={2015},
+  url={https://arxiv.org/abs/1410.3916}
 }
 
 @inproceedings{Wu2022,
   title={Memorizing Transformers},
   author={Wu, Yuhuai and Rabe, Markus N and Hutchins, DeLesley and Szegedy, Christian},
   booktitle={International Conference on Learning Representations (ICLR)},
-  year={2022}
+  year={2022},
+  url={https://arxiv.org/abs/2203.08913}
 }
 
 @inproceedings{Borgeaud2022,
@@ -40,7 +45,8 @@
   booktitle={International Conference on Machine Learning (ICML)},
   pages={2206--2240},
   year={2022},
-  organization={PMLR}
+  organization={PMLR},
+  url={https://arxiv.org/abs/2112.04426}
 }
 
 % Selective Prediction and Calibration
@@ -52,7 +58,9 @@
   number={1},
   pages={41--46},
   year={1970},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/TIT.1970.1054406},
+  url={https://doi.org/10.1109/TIT.1970.1054406}
 }
 
 @article{ElYaniv2010,
@@ -61,7 +69,8 @@
   journal={Journal of Machine Learning Research},
   volume={11},
   pages={1605--1641},
-  year={2010}
+  year={2010},
+  url={https://jmlr.org/papers/v11/el-yaniv10a.html}
 }
 
 @inproceedings{Geifman2017,
@@ -69,7 +78,8 @@
   author={Geifman, Yonatan and El-Yaniv, Ran},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={30},
-  year={2017}
+  year={2017},
+  url={https://arxiv.org/abs/1705.08500}
 }
 
 @inproceedings{Guo2017,
@@ -78,7 +88,8 @@
   booktitle={International Conference on Machine Learning (ICML)},
   pages={1321--1330},
   year={2017},
-  organization={PMLR}
+  organization={PMLR},
+  url={https://arxiv.org/abs/1706.04599}
 }
 
 @inproceedings{Madras2018,
@@ -86,7 +97,8 @@
   author={Madras, David and Pitassi, Toniann and Zemel, Richard},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={31},
-  year={2018}
+  year={2018},
+  url={https://arxiv.org/abs/1711.06664}
 }
 
 % Continual Learning
@@ -98,7 +110,9 @@
   number={13},
   pages={3521--3526},
   year={2017},
-  publisher={National Acad Sciences}
+  publisher={National Acad Sciences},
+  doi={10.1073/pnas.1611835114},
+  url={https://doi.org/10.1073/pnas.1611835114}
 }
 
 @inproceedings{Rolnick2019,
@@ -106,14 +120,16 @@
   author={Rolnick, David and Ahuja, Arun and Schwarz, Jonathan and Lillicrap, Timothy and Wayne, Greg},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={32},
-  year={2019}
+  year={2019},
+  url={https://arxiv.org/abs/1811.11682}
 }
 
 @article{Rusu2016,
   title={Progressive Neural Networks},
   author={Rusu, Andrei A and Rabinowitz, Neil C and Desjardins, Guillaume and Soyer, Hubert and Kirkpatrick, James and Kavukcuoglu, Koray and Pascanu, Razvan and Hadsell, Raia},
   journal={arXiv preprint arXiv:1606.04671},
-  year={2016}
+  year={2016},
+  url={https://arxiv.org/abs/1606.04671}
 }
 
 % Parameter-Efficient Fine-Tuning
@@ -121,7 +137,8 @@
   title={{LoRA}: Low-Rank Adaptation of Large Language Models},
   author={Hu, Edward J and Shen, Yelong and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu},
   booktitle={International Conference on Learning Representations (ICLR)},
-  year={2022}
+  year={2022},
+  url={https://arxiv.org/abs/2106.09685}
 }
 
 @inproceedings{Houlsby2019,
@@ -130,7 +147,8 @@
   booktitle={International Conference on Machine Learning (ICML)},
   pages={2790--2799},
   year={2019},
-  organization={PMLR}
+  organization={PMLR},
+  url={https://arxiv.org/abs/1902.00751}
 }
 
 % AI Safety and Alignment
@@ -138,14 +156,16 @@
   title={Constitutional {AI}: Harmlessness from {AI} Feedback},
   author={Bai, Yuntao and Kadavath, Saurav and Kundu, Sandipan and Askell, Amanda and Kernion, Jackson and Jones, Andy and Chen, Anna and Goldie, Anna and Mirhoseini, Azalia and McKinnon, Cameron and others},
   journal={arXiv preprint arXiv:2212.08073},
-  year={2022}
+  year={2022},
+  url={https://arxiv.org/abs/2212.08073}
 }
 
 @article{Rebedea2023,
   title={{NeMo} Guardrails: A Toolkit for Controllable and Safe {LLM} Applications with Programmable Rails},
   author={Rebedea, Traian and Dinu, Razvan and Sreedhar, Makesh Narsimhan and Parisien, Christopher and Cohen, Jonathan},
   journal={arXiv preprint arXiv:2310.10501},
-  year={2023}
+  year={2023},
+  url={https://arxiv.org/abs/2310.10501}
 }
 
 % Retrieval-Augmented Generation
@@ -155,7 +175,8 @@
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={33},
   pages={9459--9474},
-  year={2020}
+  year={2020},
+  url={https://arxiv.org/abs/2005.11401}
 }
 
 % Foundation Models
@@ -165,14 +186,16 @@
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={33},
   pages={1877--1901},
-  year={2020}
+  year={2020},
+  url={https://arxiv.org/abs/2005.14165}
 }
 
 @article{Touvron2023,
   title={{LLaMA}: Open and Efficient Foundation Language Models},
   author={Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timoth{\'e}e and Rozi{\`e}re, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and others},
   journal={arXiv preprint arXiv:2302.13971},
-  year={2023}
+  year={2023},
+  url={https://arxiv.org/abs/2302.13971}
 }
 
 % Contrastive Learning
@@ -182,7 +205,8 @@
   booktitle={International Conference on Machine Learning (ICML)},
   pages={1597--1607},
   year={2020},
-  organization={PMLR}
+  organization={PMLR},
+  url={https://arxiv.org/abs/2002.05709}
 }
 
 @inproceedings{Radford2021,
@@ -191,7 +215,8 @@
   booktitle={International Conference on Machine Learning (ICML)},
   pages={8748--8763},
   year={2021},
-  organization={PMLR}
+  organization={PMLR},
+  url={https://arxiv.org/abs/2103.00020}
 }
 
 % Memory Systems
@@ -199,7 +224,8 @@
   title={{MemGPT}: Towards {LLMs} as Operating Systems},
   author={Packer, Charles and Wooders, Sarah and Lin, Kevin and Fang, Vivian and Patil, Shishir G and Stoica, Ion and Gonzalez, Joseph E},
   journal={arXiv preprint arXiv:2310.08560},
-  year={2023}
+  year={2023},
+  url={https://arxiv.org/abs/2310.08560}
 }
 
 % Out-of-Distribution Detection
@@ -207,7 +233,8 @@
   title={A Baseline for Detecting Misclassified and Out-of-Distribution Examples in Neural Networks},
   author={Hendrycks, Dan and Gimpel, Kevin},
   booktitle={International Conference on Learning Representations (ICLR)},
-  year={2017}
+  year={2017},
+  url={https://arxiv.org/abs/1610.02136}
 }
 
 @inproceedings{Liu2020,
@@ -216,5 +243,6 @@
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={33},
   pages={21464--21475},
-  year={2020}
+  year={2020},
+  url={https://arxiv.org/abs/2010.03759}
 }
