--- a/physics/coherism_refs.bib
+++ b/physics/coherism_refs.bib
@@ -313,3 +313,50 @@
   archivePrefix = {arXiv},
   url = {https://doi.org/10.12942/lrr-2005-12}
 }
+
+@article{Steinhauer2016,
+  author = {Steinhauer, Jeff},
+  title = {Observation of quantum Hawking radiation and its entanglement in an analogue black hole},
+  journal = {Nature Physics},
+  volume = {12},
+  pages = {959--965},
+  year = {2016},
+  doi = {10.1038/nphys3863},
+  url = {https://doi.org/10.1038/nphys3863}
+}
+
+@article{Ketterle2002,
+  author = {Ketterle, Wolfgang},
+  title = {Nobel lecture: When atoms behave as waves: Bose-Einstein condensation and the atom laser},
+  journal = {Reviews of Modern Physics},
+  volume = {74},
+  number = {4},
+  pages = {1131--1151},
+  year = {2002},
+  doi = {10.1103/RevModPhys.74.1131},
+  url = {https://doi.org/10.1103/RevModPhys.74.1131}
+}
+
+@article{Cornell1995,
+  author = {Anderson, M. H. and Ensher, J. R. and Matthews, M. R. and Wieman, C. E. and Cornell, E. A.},
+  title = {Observation of Bose-Einstein Condensation in a Dilute Atomic Vapor},
+  journal = {Science},
+  volume = {269},
+  number = {5221},
+  pages = {198--201},
+  year = {1995},
+  doi = {10.1126/science.269.5221.198},
+  url = {https://doi.org/10.1126/science.269.5221.198}
+}
+
+@article{Bloch2008,
+  author = {Bloch, Immanuel and Dalibard, Jean and Zwerger, Wilhelm},
+  title = {Many-body physics with ultracold gases},
+  journal = {Reviews of Modern Physics},
+  volume = {80},
+  number = {3},
+  pages = {885--964},
+  year = {2008},
+  doi = {10.1103/RevModPhys.80.885},
+  url = {https://doi.org/10.1103/RevModPhys.80.885}
+}
